<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_destination_card_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/item_destination_card_image_view"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:contentDescription="@string/content_description_media"
                android:scaleType="centerCrop"
                app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.Media"
                app:srcCompat="@drawable/london_gb" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/item_destination_card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_destination_card_title"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/item_destination_card_secondary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/item_destination_card_secondary_text"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/item_destination_card_supporting_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/item_destination_card_supporting_text"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:id="@+id/item_destination_card_buttons_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/item_destination_card_left_button"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/item_destination_card_left_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/item_destination_card_right_button"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_destination_card_right_button" />
            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
</layout>